--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,7 +98,7 @@ services:
       - SERVER_ID_IS_HOSTNAME=${SERVER_ID_IS_HOSTNAME:-false}
       - RAILS_LOG_TO_STDOUT=${RAILS_LOG_TO_STDOUT:-false}
     volumes:
-      - ./log/scalelite-poller/:/app/log
+      - ./log/scalelite-poller/:/srv/scalelite/log/
     command: /bin/sh -c "bin/start-poller"
     depends_on:
       - scalelite-api
@@ -117,7 +117,7 @@ services:
       - RECORDING_DISABLED=false
       - RAILS_LOG_TO_STDOUT=${RAILS_LOG_TO_STDOUT:-false}
     volumes:
-      - ./log/scalelite-recording-importer/:/app/log
+      - ./log/scalelite-recording-importer/:/srv/scalelite/log/
       - ${SCALELITE_RECORDING_DIR:-/mnt/scalelite-recordings/var/bigbluebutton}:/var/bigbluebutton
       - ${SCALELITE_RECORDING_DIR:-/mnt/scalelite-recordings/var/bigbluebutton}/spool:/var/bigbluebutton/spool
     command: /bin/sh -c "bin/start-recording-importer"
