--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - postgres-data:/var/lib/postgresql/data
 
   redis:
-    image: ${REDIS_DOCKER_IMAGE:-redis:7.4-alpine}
+    image: ${REDIS_DOCKER_IMAGE:-valkey:9.0-alpine}
     container_name: redis
     restart: unless-stopped
     volumes:
@@ -35,7 +35,7 @@ services:
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
   scalelite-proxy:
-    image: ${NGINX_DOCKER_IMAGE:-nginx:1.27.3}
+    image: ${NGINX_DOCKER_IMAGE:-nginx:1.29.3}
     container_name: scalelite-proxy
     restart: unless-stopped
     ports:
