--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - postgres-data:/var/lib/postgresql/data
 
   redis:
-    image: ${REDIS_DOCKER_IMAGE:-valkey:9.0-alpine}
+    image: ${REDIS_DOCKER_IMAGE:-valkey/valkey:9.0-alpine}
     container_name: redis
     restart: unless-stopped
     volumes:
